<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dizaê</string>
    <string name="action_settings">Settings</string>
    <string name="btLogin">Entrar</string>
    <string name="btCadastrar">Cadastrar-se</string>
    <string name="btCancelar">Cancelar</string>
    <string name="btVoltar">Voltar</string>
    <string name="tvRanking">Ranking da Semana</string>
    <string name="btVerLista">Visualizar lista de problemas</string>
    <string name="home">Página Inicial</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="etNome">Digite seu nome completo.</string>
    <string name="etCPF">Digite seu CPF.</string>
    <string name="etEndereco">Digite seu endereço.</string>
    <string name="etEmail">Digite seu e-mail.</string>
    <string name="etSenha">Digite uma senha.</string>
    <string name="etConSenha">Confirme sua senha.</string>
    <string name="aviso1">Este e-mail será seu login.*</string>
    <string name="tvProblema">Que problema você deseja reportar?</string>
    <string name="spCategorias">Selecione uma categoria</string>
    <string name="etDescricao">Descreva aqui sua reclamação.</string>
    <string name="fotovideo">Anexar Foto/Vídeo</string>
    <string name="reportar">Reportar problema</string>
    <string name="title_activity_lista_recl">Lista de Notificações</string>
    <string name="svListaRecl">Pesquise notificações</string>
    <string name="cbSalvarSenha">Salvar senha</string>
    <string name="btSeguirPubl">Seguir Publicação</string>
    <string name="title_activity_usuario">Informações de Usuário</string>
    <string name="info_nome">Nome:</string>
    <string name="info_email">E-mail:</string>
    <string name="info_ender">Endereço:</string>
    <string name="info_cpf">CPF:</string>
    <string name="nome_usuario">Gollum Sméagol</string>
    <string name="email_usuario">smeagol.precioso@gmail.com</string>
    <string name="ender_usuario">Misty Mountains cave</string>
    <string name="cpf_usuario">000.000.000-00</string>
    <string name="btEditarInfo">Editar Informações</string>
    <string name="minhas_public">Minhas Publicações</string>
    <string name="title_activity_editar_usuario">EditarUsuarioActivity</string>
    <string name="btConfirmar">Confirmar</string>
    <string name="tvCondicao"></string>
    <string name="tvProb">Descrição do Problema</string>
    <string name="cbResolvido">Marque para Resolvido</string>
    <string name="title_activity_rec">RecActivity</string>
    <string name="sidebar_home">Home</string>
    <string name="sidebar_config">Configurações</string>
    <string name="sidebar_perfil">Perfil do Usuário</string>
    <string name="sidebar_new_publication">Nova Publicação</string>
    <string name="sidebar_feed">Feed</string>
    <string name="tvResolvidoLista">Resolvido</string>
    <string name="btCadastro">Cadastrar</string>
    <string name="etTitulo">Dê um título a sua reclamação</string>
    <string name="title_activity_vis_probl">VisProblActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="tvTitulo">Titulo da Reclamação</string>

</resources>
