<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo02" >

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="44dp"
        android:text="@string/info_nome"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/info_email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="1dp"
        android:text="@string/info_ender"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="1dp"
        android:text="@string/info_cpf"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/nome_usuario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView5"
        android:layout_marginLeft="2dp"
        android:text="@string/email_usuario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/ender_usuario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/cpf_usuario"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView6"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="5dp"
        android:text="@string/btEditarInfo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/minhas_public"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" >

    </ListView>

</RelativeLayout>

<!--
     android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view.
    -->

    <LinearLayout
        android:id="@+id/sidebar"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sidebar_user_email"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_home"
            android:gravity="left|center"
            android:text="@string/sidebar_home"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_conf"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:background="#25A6FF"
            android:drawableLeft="@drawable/ic_action_settings"
            android:gravity="left|center"
            android:text="@string/sidebar_config"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_user_perfil"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_person"
            android:gravity="left|center"
            android:text="@string/sidebar_perfil"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_nova_ocorrencia"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_new_publication"
            android:gravity="left|center"
            android:text="@string/sidebar_new_publication"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_feed"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_feed"
            android:gravity="left|center"
            android:text="@string/sidebar_feed"
            android:textColor="#FCFDFF" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>