<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/fundo02"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/cbResolvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvProb"
        android:layout_marginBottom="15dp"
        android:text="@string/cbResolvido" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btLogin"
        android:layout_marginTop="20dp"
        android:text="@string/spCategorias"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btLogin"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:text="@string/btVerLista"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvProb"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:layout_margin="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/tvProb" />

</RelativeLayout>