<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo02" >

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->

    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp" />

        <ExpandableListView
            android:id="@+id/expandableListView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/svListaRecl"
            android:layout_below="@+id/svListaRecl"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp" >
        </ExpandableListView>

        <SearchView
            android:id="@+id/svListaRecl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvProblema"
            android:layout_marginTop="10dp" >
        </SearchView>

        <TextView
            android:id="@+id/tvProblema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp"
            android:text="@string/tvRanking"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <!--
     android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view.
    -->

    <LinearLayout
        android:id="@+id/sidebar"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sidebar_home"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_home"
            android:gravity="left|center"
            android:text="@string/sidebar_home"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_conf"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:background="#25A6FF"
            android:drawableLeft="@drawable/ic_action_settings"
            android:gravity="left|center"
            android:text="@string/sidebar_config"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_user_perfil"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_person"
            android:gravity="left|center"
            android:text="@string/sidebar_perfil"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_nova_ocorrencia"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_new_publication"
            android:gravity="left|center"
            android:text="@string/sidebar_new_publication"
            android:textColor="#FCFDFF" />

        <TextView
            android:id="@+id/sidebar_feed"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/sidebar_heigth"
            android:drawableLeft="@drawable/ic_action_feed"
            android:gravity="left|center"
            android:text="@string/sidebar_feed"
            android:textColor="#FCFDFF" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>